<resources>
    <string name="bmob_key">4cae609819dc98da5a60d55fad587537</string>
    <string name="app_name">MPost</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="loading">请稍后...</string>

    <string name="action_commit">完成</string>

    <!--登陆注册-->
    <string name="hint_account">账号</string>
    <string name="hint_password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>

    <string name="info_account_empty">账号不能为空</string>
    <string name="info_password_empty">密码不能为空</string>
    <string name="info_login_failed">登陆失败</string>
    <string name="info_login_success">登陆成功</string>
    <string name="info_register_failed">注册失败</string>
    <string name="info_register_success">注册成功</string>

    <!--MainActivity-->
    <string name="action_home">首页</string>
    <string name="action_comment">评论</string>
    <string name="action_star">收藏</string>
    <string name="action_like">点赞</string>
    <string name="action_follow">关注</string>
    <string name="action_ranking_list">点赞榜</string>
    <string name="action_publish_post">发帖</string>
    <string name="action_search">搜索</string>

    <!--PublishPostFragment-->
    <string name="hint_post">这一刻的想法...</string>
    <string name="who_can_see">谁可以看</string>
    <string name="info_publish_post_failure">发帖失败</string>
    <string name="info_publish_post_success">发帖成功</string>
    <string name="publishing">发帖中...</string>

    <!--AlbumFragment-->
    <string name="info_no_storage">暂无外部存储</string>
    <string name="info_retry">请重新尝试</string>
    <string name="all_photo">所有图片</string>
    <string name="scanning">拼命扫描中...</string>
    <string name="scan_failed">擦，一张图片没扫描到</string>

    <!--TimeLineFragment-->
    <string name="info_access_error">访问失败</string>


    <!--PostDetailFragment-->
    <string name="send">发送</string>
    <string name="hint_comment">评论</string>
    <string name="info_favor_success">收藏成功</string>
    <string name="info_favor_failed">收藏失败</string>
    <string name="info_like_success">赞帖成功</string>
    <string name="info_like_failed">赞帖失败</string>
    <string name="info_comment_failed">评论失败</string>
    <string name="info_comment_success">评论成功</string>
    <!--title-->
    <string name="title_login">登陆</string>
    <string name="title_register">注册</string>
    <string name="title_album">相册</string>
    <string name="title_publish_post">发帖</string>
    <string name="title_search">搜索</string>
    <string name="title_post_visible">谁可以看</string>
    <string name="title_comment">评论</string>
    <string name="title_post_detail">详情</string>
    <string name="title_like_rank">点赞榜</string>
    <string name="title_forbidden_user">限制用户</string>
    <string name="title_user_admin">用户管理</string>

    <string-array name="camera_gallery">
        <item>相机</item>
        <item>图片</item>
    </string-array>

</resources>
