<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/action_comment"
            android:title="@string/action_comment" />
        <item
            android:id="@+id/action_follow"
            android:title="@string/action_follow" />
        <item
            android:id="@+id/action_star"
            android:title="@string/action_star" />
        <item
            android:id="@+id/action_like"
            android:title="@string/action_like" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/action_logout"
                android:title="注销" />
        </menu>
    </item>
</menu>