<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_account"
        style="@style/TextInputLayoutStyle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/et_account"
            style="@style/EditTextStyle"
            android:hint="@string/hint_account"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_pwd"
        style="@style/TextInputLayoutStyle"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/et_pwd"
            style="@style/EditTextStyle"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/register"/>

</LinearLayout>
